<resources>
    <string name="app_name">DriveNext</string>
    <string name="slogan_1">Поможем найти твою следующую поездку</string>
    <string name="app_logo">Логотип DriveNext</string>
    <string name="no_connection">Нет подключения\nк интернету</string>
    <string name="connection_help">Проверьте подключение и повторите попытку</string>
    <string name="try_again">Повторить попытку</string>
    <string name="onboarding_title_1">Аренда автомобилей</string>
    <string name="onboarding_slogan_1">Открой для себя удобный и доступный способ передвижения</string>
    <string name="skip">Пропустить</string>
    <string name="next">Далее</string>
    <string name="onboarding_content_1">Иллюстрация автомобиля, символизирующая простую и доступную аренду.</string>
    <string name="onboarding_title_2">Безопасно и удобно</string>
    <string name="onboarding_slogan_2">Арендуй автомобиль и наслаждайся его удобством</string>
    <string name="onboarding_content_2">Изображение улыбающегося водителя в автомобиле, отражающее комфорт и безопасность.</string>
    <string name="onboarding_title_3">Лучшие предложения</string>
    <string name="onboarding_slogan_3">Выбирай понравившееся среди сотен доступных автомобилей</string>
    <string name="onboarding_content_3">Иллюстрация с выбором автомобилей.</string>
    <string name="log_in">Войти</string>
    <string name="register">Зарегистрироваться</string>
    <string name="log_in_to_acc">Войдите в аккаунт</string>
    <string name="enter_details">Пожалуйста, введите свои данные</string>
    <string name="email">Электронная почта</string>
    <string name="email_hint">Введите электронную почту</string>
    <string name="password">Пароль</string>
    <string name="password_hint">Введите пароль</string>
    <string name="log_in_google">Войти через Google</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="back">Назад</string>
    <string name="create_acc">Создать аккаунт</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="agreement">Я согласен с условиями обслуживания и политикой конфиденциальности</string>
    <string name="surname">Фамилия</string>
    <string name="surname_hint">Введите фамилию</string>
    <string name="name">Имя</string>
    <string name="name_hint">Введите имя</string>
    <string name="patronymic">Отчество</string>
    <string name="patronymic_hint">Введите отчество</string>
    <string name="date_of_birth">Дата рождения</string>
    <string name="date_hint" translatable="false">DD/MM/YYYY</string>
    <string name="sex">Пол</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="acc_photo">Фото профиля</string>
    <string name="acc_photo_hint">Добавление фотографии поможет владельцам и арендаторам узнать друг друга, когда они будут забирать машину</string>
    <string name="driver_license_number">Номер водительского удостоверения</string>
    <string name="driver_license_number_hint">0000000000</string>
    <string name="date_of_issue">Дата выдачи</string>
    <string name="upload_driver_license">Загрузите фото водительского удостоверения</string>
    <string name="upload_photo">Загрузить фото</string>
    <string name="upload_passport">Загрузите фото паспорта</string>
    <string name="enjoy">Пользуйтесь с удовольствием</string>
    <string name="congratulations">Поздравляем</string>
    <string name="congratulations_text">Вы успешно зарегистрировались.\nОбработка ваших персональных данных займет около двух часов. Спасибо за ожидание.</string>
    <string name="go">Поехали</string>
    <string name="error_required">Это поле является обязательным</string>
    <string name="error_invalid_email">Введите корректный email</string>
    <string name="error_incorrect_credentials">Неверные данные</string>
    <string name="error_driver_license_photo">Загрузите фото водительского удостоверения</string>
    <string name="error_passport_photo">Загрузите фото паспорта</string>
    <string name="settings">Настройки</string>
    <string name="arrow_right">Стрекла вправо</string>
    <string name="my_bookings">Мои бронирования</string>
    <string name="theme">Тема</string>
    <string name="notifications">Уведомления</string>
    <string name="add_car">Подключить свой автомобиль</string>
    <string name="help">Помощь</string>
    <string name="invite">Пригласи друга</string>
    <string name="avatar_border">Граница фото профиля</string>
    <string name="google">Google</string>
    <string name="logout">Выйти из профиля</string>
    <string name="change_password">Поменять пароль</string>
    <string name="book">Забронировать</string>
    <string name="details">Детали</string>
    <string name="per_day">&#032;в день</string>
    <string name="gearbox">A/T</string>
    <string name="fuel">Бензин</string>
    <string name="try_again_help">Не удалось загрузить данные.\nПопробуйте снова.</string>
    <string name="find_car">Давайте найдём автомобиль</string>
    <string name="enter_car_brand">Введите марку автомобиля</string>
    <string name="car_photo">Фото автомобиля</string>
    <string name="search_result">Результаты поиска</string>
    <string name="search_for_cars">Ищем подходящие автомобили</string>
    <string name="become_host">Стать арендодателем</string>
    <string name="become_host_description">Узнайте, что включает в себя становление арендодателем в приложении.\nПрисоединяйтесь к тысячам владельцев, зарабатывающих в приложении.</string>
    <string name="how_it_works">Как это работает?</string>
    <string name="how_it_works_description">Размещение бесплатное,  вы можете устанавливать свои цены, доступность и правила. Получение и возврат автомобиля просты, а оплата производится быстро после каждой поездки.</string>
    <string name="insurance_policy">Политика страхования</string>
    <string name="insurance_policy_description">Доступны различные уровни защиты автомобиля на случай непредвиденных ситуаций.</string>
    <string name="we_support_you">Мы поддержим вас</string>
    <string name="we_support_you_description">От проверки арендаторов до поддержки клиентов – вы всегда можете делиться своим автомобилем с уверенностью.</string>
    <string name="start">Начать</string>
    <string name="adding_car">Добавление автомобиля</string>
    <string name="car_location">Где расположен ваш автомобиль?</string>
    <string name="enter_address">Введите адрес</string>
    <string name="year_of_release">Год выпуска</string>
    <string name="year">Год</string>
    <string name="brand">Марка</string>
    <string name="car_brand">Марка автомобиля</string>
    <string name="model">Модель</string>
    <string name="mileage">Пробег</string>
    <string name="add_description">Добавьте описание</string>
    <string name="add_description_hint">Пожалуйста, добавьте дополнительную информацию о вашем автомобиле, которая может быть интересна арендатору. Например, о внутреннем оформлении, мощности и других особенностях вашего автомобиля.</string>
    <string name="send">Отправить</string>
    <string name="add_car_photos">Добавление фотографий</string>
    <string name="add_car_photos_hint">Нажмите, чтобы добавить фото</string>
    <string name="your_car_added">Ваш автомобиль добавлен</string>
    <string name="success_car_adding">Поздравляем! Ваш автомобиль одобрен</string>
    <string name="home">На главную</string>
    <string name="transmission">Трансмиссия</string>

</resources>