<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="24dp">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in_to_acc"
            android:textSize="24sp"
            android:textColor="@color/darkGray"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <TextView
            android:id="@+id/tvSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_details"
            android:textColor="@color/blueGray"
            android:textSize="14sp"
            android:layout_marginBottom="60dp"/>

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/email"
            android:textColor="@color/gray"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/lightGrey"
            android:textColorHint="@color/blueGray"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="12dp"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPasswrod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/password"
            android:textColor="@color/gray"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/lightGrey"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/lightGrey"
            android:textColorHint="@color/blueGray"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingVertical="12dp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/violet"
            android:textSize="14sp"
            android:layout_marginBottom="28dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/log_in"
            android:textSize="14sp"
            app:cornerRadius="8dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in_google"
            android:textSize="14sp"
            android:textColor="@color/darkGray"
            android:backgroundTint="@android:color/white"
            app:strokeColor="@color/lightGrey"
            app:strokeWidth="1dp"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_google_logo"
            app:iconTint="@null"
            app:iconGravity="textStart"
            app:iconPadding="8dp"
            android:layout_marginBottom="36dp"/>

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/register"
            android:textSize="14sp"
            android:textColor="@color/violet"
            android:layout_marginTop="8dp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
