<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:id="@+id/tvAppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="52dp"
        android:text="@string/app_name"
        android:textColor="@color/violet"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tvSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan_1"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:alpha="0.7"
        android:gravity="center"/>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:src="@drawable/ic_splash_screen"
        android:contentDescription="@string/app_logo"
        android:layout_marginBottom="32dp"/>
</LinearLayout>
