<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_arrow_back"
            android:contentDescription="@string/back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_acc"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/darkGray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/formContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="32dp">

        <ImageView
            android:id="@+id/ivProfilePhoto"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_profile_placeholder"
            android:contentDescription="@string/acc_photo"
            android:scaleType="centerCrop"
            android:clickable="true"
            android:focusable="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acc_photo_hint"
            android:layout_marginBottom="14dp"
            android:textSize="13sp"
            android:textColor="@color/darkGray"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/driver_license_number"
            android:textSize="14sp"
            android:textColor="@color/gray"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/lightGrey"
            android:textColorHint="@color/blueGray"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLicense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/driver_license_number_hint"
                android:paddingVertical="12dp"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_issue"
            android:textSize="14sp"
            android:textColor="@color/gray"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/licenseDateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundMode="outline"
            app:boxStrokeColor="@color/lightGrey"
            android:textColorHint="@color/blueGray"
            app:boxCornerRadiusTopStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusBottomEnd="8dp"
            app:startIconDrawable="@drawable/ic_calendar"
            app:startIconTint="@color/violet">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLicenseDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_hint"
                android:paddingStart="40dp"
                android:paddingVertical="12dp"
                android:focusable="true"
                android:clickable="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_driver_license"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:layout_marginBottom="4dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="12dp"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/btnUploadLicense"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_upload"
                android:contentDescription="@string/upload_photo"

                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_photo"
                android:textSize="14sp"
                android:textColor="@color/blueGray"
                android:layout_marginStart="12dp"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_passport"
            android:textSize="14sp"
            android:textColor="@color/gray"
            android:layout_marginBottom="4dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="24dp">

            <ImageView
                android:id="@+id/btnUploadPassport"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_upload"
                android:contentDescription="@string/upload_photo"
                android:clickable="true"
                android:focusable="true"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/upload_photo"
                android:textSize="14sp"
                android:textColor="@color/blueGray"
                android:layout_marginStart="12dp"/>
        </LinearLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_marginBottom="14dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
